feat: init template & block structure

--- a/site/blueprints/pages/project.yml
+++ b/site/blueprints/pages/project.yml
@@ -48,101 +48,9 @@ fields:
     label: Contenu
     type: blocks
     fieldsets:
-      texte:
-        wysiwyg: true
-        preview: fields
-        fields:
-          text:
-            type: writer
-            nodes:
-              - paragraph
-              - bulletList
-              - orderedList
-            marks:
-              - bold
-              - italic
-              - link
-      gallery:
-        label: Galerie
-        preview: fields
-        wysiwyg: true
-        fields:
-          images:
-            label: 'images'
-            type: files
-            query: model.images
-            multiple: true
-            min: 2
-            layout: cards
-            size: small
-            uploads:
-              template: blocks/image
-          caption:
-            label: field.blocks.image.caption
-            type: writer
-            icon: text
-            inline: true
-
-      podcast:
-        label: Podcast Spotify
-        icon: audio
-        preview: fields
-        wysiwyg: true
-        fields:
-          spotify_url:
-            label: URL Spotify
-            type: url
-            placeholder: https://open.spotify.com/episode/...
-      video:
-        label: Vidéo
-        preview: fields
-        wysiwyg: true
-        fields:
-          url:
-            label: field.blocks.video.url.label
-            type: url
-            placeholder: field.blocks.video.url.placeholder
-          caption:
-            label: Légende
-            type: writer
-            inline: true
-            marks:
-              - bold
-              - italic
-              - link
-          credits:
-            width: 2/3
-            label: crédits
-            type: writer
-            inline: true
-            marks:
-              - bold
-              - italic
-              - link
-          date:
-            width: 1/3
-            label: Date
-            type: date
-      cards:
-        label: Cards
-        wysiwyg: true
-        preview: fields
-        name: Cards
-        icon: grid
-        fields:
-          cards_titre:
-            label: Titre
-            type: text
-          cards:
-            label: Cards
-            type: structure
-            fields:
-              text:
-                label: Text
-                type: writer
-                inline: true
-                marks:
-                  - italic
-              baseline:
-                label: baseline
-                type: text
+      - texte
+      - gallery
+      - podcast
+      - video
+      - cards
+      - article_heading
