feat: Standardize blueprint keys and add new block features
Replaced "label" with "name" for consistency across blueprints. Introduced new blocks (map and pages_list) and enhanced existing ones with additional fields, such as cover images and toggles. Improved page sections with better image handling and field structure for clarity and functionality.

--- a/site/blueprints/blocks/article_heading.yml
+++ b/site/blueprints/blocks/article_heading.yml
@@ -1,4 +1,4 @@
-label: En-tete d'article
+name: En-tete d'article
 wysiwyg: true
 preview: fields
 fields:
@@ -6,6 +6,7 @@ fields:
     label: Titre
     type: text
   text:
+    label: Texte
     type: writer
     nodes:
       - paragraph
