--- a/site/blueprints/pages/default.yml
+++ b/site/blueprints/pages/default.yml
@@ -5,11 +5,32 @@ status:
   listed: En ligne
 
 fields:
+  image_cover:
+    label: Image de couverture
+    type: files
+    uploads:
+      accept: image/*
+    max: 1
+    min: 0
+    layout: cards
+    image:
+      back: black
+    size: small
+    width: 1/2
+
+  show_title:
+    width: 1/2
+    label: Afficher le titre
+    type: toggle
+    default: false
+    text:
+      - non
+      - oui
   content:
     label: Contenu
     type: blocks
     fieldsets:
-      - texte
+      - text
       - gallery
       - podcast
       - video
