Store simple names for tags

--- a/site/blueprints/pages/project.yml
+++ b/site/blueprints/pages/project.yml
@@ -28,6 +28,7 @@ fields:
     options:
       type: query
       query: site.find('tags').children
+      value: "{{ page.title }}"
     multiple: true
     width: 1/2
 
