Add more text options for description field in project page

--- a/site/blueprints/pages/project.yml
+++ b/site/blueprints/pages/project.yml
@@ -42,10 +42,12 @@ fields:
     type: writer
     nodes:
       - paragraph
+      - bulletList
+      - orderedList
     marks:
+      - bold
       - italic
       - link
-
   content:
     label: Contenu
     type: blocks
