--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
   "require": {
     "php": "~8.2.0 || ~8.3.0 || ~8.4.0 || ~8.5.0",
     "getkirby/cms": "^5.2",
-    "getkirby/kql": "^3.0"
+    "getkirby/kql": "^3.0",
+    "johannschopplich/kirby-headless": "^6.0"
   },
   "config": {
     "allow-plugins": {
